--- a/arch/arm64/boot/dts/rockchip/rk3399-roc-pc-pro.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-roc-pc-pro.dtsi
@@ -171,5 +171,7 @@
 */
 
 &pcie0 {
+	ep-gpios = <&gpio4 RK_PD1 GPIO_ACTIVE_HIGH>;
+	pinctrl-0 = <&pcie_clkreqnb_cpm>;
 	/delete-property/ vpcie3v3-supply;
 };
