configs: rk1808 4g ec20 support

--- a/arch/arm64/configs/firefly_rk1808_defconfig
+++ b/arch/arm64/configs/firefly_rk1808_defconfig
@@ -411,3 +411,7 @@ CONFIG_PC9202_WATCHDOG=y
 CONFIG_MTD_M25P80=y
 CONFIG_MTD=y
 CONFIG_MTD_SPI_NOR=y
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_OPTION=y
+CONFIG_USB_USBNET=y
+CONFIG_USB_NET_QMI_WWAN=y
