--- a/drivers/pwm/Kconfig
+++ b/drivers/pwm/Kconfig
@@ -462,4 +462,10 @@ config PWM_VT8500
 	  To compile this driver as a module, choose M here: the module
 	  will be called pwm-vt8500.
 
+config PWM_FIREFLY
+	tristate "Firefly pwm driver demo"
+	default y
+	help
+		Firefly pwm driver demo
+
 endif
