drivers: add gpio driver demo gpio-firefly.c

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -1071,4 +1071,10 @@ config GPIO_ADB_SELECT
         help
         Sample code of ADB select .
 
+config GPIO_FIREFLY
+	tristate "Firefly gpio driver demo"
+	default y
+	help
+		Firefly gpio driver demo
+
 endif
