--- a/arch/arm64/boot/dts/rockchip/rk3399-roc-pc-plus.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-roc-pc-plus.dtsi
@@ -166,10 +166,18 @@
 	};
 };
 
+&vcc_wifi {
+	gpio = <&gpio2 4 GPIO_ACTIVE_HIGH>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&vcc_wifi_h>;
+};
 
+&vcc_wifi_h {
+	rockchip,pins = <2 4 RK_FUNC_GPIO &pcfg_pull_none>;
+};
 
 &pinctrl {
-	 es8388-pins {
+	es8388-pins {
 		ear_ctl_h: ear-ctl-h {
             rockchip,pins =
 				<0 2 RK_FUNC_GPIO &pcfg_pull_down>;
