--- a/arch/arm64/boot/dts/rockchip/rk3399-roc-pc-mipi.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-roc-pc-mipi.dts
@@ -1,8 +1,9 @@
 /dts-v1/;
-#include "rk3399-roc-pc.dtsi"
+
+#include "rk3399-roc-pc-plus.dtsi"
 
 / {
-	model = "Firefly roc-rk3399-pc";
+	model = "Firefly ROC-RK3399-PC-PLUS and ROC-RK3399-PC-Pro";
 	compatible = "firefly,roc-rk3399-pc", "rockchip,rk3399";
 
 };
