--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -698,6 +698,12 @@ config SPI_TLE62X0
 	  sysfs interface, with each line presented as a kind of GPIO
 	  exposing both switch control and diagnostic feedback.
 
+config SPI_FIREFLY
+	tristate "Firefly SPI demo support"
+	default y
+	help
+	  Select this option if your Firefly board needs to run SPI demo.
+
 config SPI_WK2XXX
 	tristate "wk2xxx Spi Switch Uart"
 	depends on SPI
