arm64: dts: rk3399-roc-pc.dtsi: contain of rk3399-firefly-demo
Signed-off-by: weicz <wcz@t-chip.com.cn>

--- a/arch/arm64/boot/dts/rockchip/rk3399-roc-pc.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-roc-pc.dtsi
@@ -2,6 +2,7 @@
 #include "rk3399.dtsi"
 #include "rk3399-opp.dtsi"
 #include "rk3399-linux.dtsi"
+#include "rk3399-firefly-demo.dtsi"
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/display/media-bus-format.h>
 //#include "include/uapi/drm/drm_mode.h"
