--- a/arch/arm64/boot/dts/rockchip/rk3399-firefly-CS-R1-jd4-main.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-firefly-CS-R1-jd4-main.dts
@@ -10,6 +10,7 @@
 	/delete-node/ gpio-keys;
 	/delete-node/ wireless-wlan;
 	/delete-node/ wireless-bluetooth;
+	/delete-node/ external-gmac-clock;
 	test-power {
 		status = "okay";
 	};
@@ -216,6 +217,49 @@
 
 };
 
+
+&cru {
+		assigned-clock-rates =
+			 <75000000>, <50000000>,
+			 <50000000>, <50000000>,
+			 <50000000>, <100000000>,
+			 <50000000>, <150000000>,
+			 <150000000>, <150000000>,
+			 <50000000>, <150000000>,
+			 <50000000>, <100000000>,
+			 <75000000>, <75000000>,
+			 <816000000>, <816000000>,
+			 <500000000>, <200000000>,
+			 <800000000>, <150000000>,
+			 <75000000>, <37500000>,
+			 <300000000>, <100000000>,
+			 <50000000>, <100000000>,
+			 <50000000>, <100000000>,
+			 <100000000>, <100000000>,
+			 <100000000>, <100000000>,
+			 <100000000>, <50000000>,
+			 <50000000>, <50000000>,
+			 <50000000>, <50000000>,
+			 <200000000>, <400000000>,
+			 <400000000>, <100000000>,
+			 <100000000>, <100000000>,
+			 <400000000>, <400000000>,
+			 <200000000>, <100000000>,
+			 <200000000>, <200000000>,
+			 <100000000>, <400000000>,
+			 <400000000>, <400000000>,
+			 <400000000>, <300000000>,
+			 <400000000>, <200000000>,
+			 <400000000>, <300000000>,
+			 <300000000>, <300000000>,
+			 <300000000>, <600000000>,/* aclk_cci */
+			 <100000000>, <150000000>,
+			 <150000000>, <400000000>,
+			 <100000000>, <400000000>,
+			 <100000000>;
+};
+
+
 &pwm3 {
 	status = "disabled";
 };
@@ -344,6 +388,11 @@
 &gmac {
 	tx_delay = <0x2c>;
 	rx_delay = <0x28>;
+	clock_in_out = "output";
+	clk_alway_enable = "true";
+	assigned-clocks = <&cru SCLK_MAC>, <&cru SCLK_RMII_SRC>;
+	assigned-clock-rates = <0>, <125000000>;
+	assigned-clock-parents = <&cru PLL_NPLL>, <&cru SCLK_MAC>;
 };
 
 &hdmi_dp_sound {
