arm64: dts: rk3399-firefly-CS-R1-jd4-main set vcc3v3_pcie

--- a/arch/arm64/boot/dts/rockchip/rk3399-firefly-CS-R1-jd4-main.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-firefly-CS-R1-jd4-main.dts
@@ -307,6 +307,15 @@
 	max-link-speed = <2>;
 };
 
+&pcie_phy {
+    status = "okay";
+};
+
+&vcc3v3_pcie {
+    status = "okay";
+    gpio = <&gpio1 4 GPIO_ACTIVE_HIGH>;
+};
+
 &i2c4 {
 	status = "disabled";
 };
